Added valid checking inside the input HTML to block invalid inputs. Commented the function approach out.
Co-authored-by: FutzMonitor cgonzalez.smdc@gmail.com

--- a/farmdata2_modules/fd2_tabs/fd2_field_kit/seedingInput.html
+++ b/farmdata2_modules/fd2_tabs/fd2_field_kit/seedingInput.html
@@ -23,24 +23,24 @@
                 <p>Please Select Tray Seeding or Direct Seeding<label style='color: #da4f3f'>*</label></p>
             </div>
             <div v-if='(selectedSeedingType=="Tray Seedings")' style='padding: 12px;text-align:center;font-size: medium;'>
-                <label>Number of Trays Planted:<label style='color: #da4f3f'>*</label> </label><input data-cy='trays-planted' style='width: 75px;' type='number'min="0" max='1000000000' @keypress="restrictChars($event)" v-model.number='numOfTrays'>
+                <label>Number of Trays Planted:<label style='color: #da4f3f'>*</label> </label><input data-cy='trays-planted' style='width: 75px;' type='number'min='0' max='1000000000' oninput="validity.valid||(value='');" v-model.number='numOfTrays' title="posint"> 
                 <br>
-                <label>Cells per Tray:<label style='color: #da4f3f'>*</label> </label><input data-cy='cells-tray' style='width: 75px;' type='number' min="0" max='1000000000' @keypress="restrictChars($event)" v-model.number='numCellsPerTray'>
+                <label>Cells per Tray:<label style='color: #da4f3f'>*</label> </label><input data-cy='cells-tray' style='width: 75px;' type='number' min='0' max='1000000000' oninput="validity.valid||(value='');" v-model.number='numCellsPerTray'>
                 <br>
-                <label>Number of Seeds Planted:<label style='color: #da4f3f'>*</label> </label><input data-cy='seeds-planted' style='width: 75px;' min="0" max='1000000000' @keypress="restrictChars($event)" type='number' v-model.number='numSeedsPlanted'>
+                <label>Number of Seeds Planted:<label style='color: #da4f3f'>*</label> </label><input data-cy='seeds-planted' style='width: 75px;' min='0' max='1000000000' oninput="validity.valid||(value='');" type='number' v-model.number='numSeedsPlanted'>
             </div>
             <div v-if='(selectedSeedingType=="Direct Seedings")' style='padding: 12px;text-align:center;font-size: medium;'>
-                <label>Rows per Bed:<label style='color: #da4f3f'>*</label> </label><input data-cy='row-bed' style='width: 75px;'min="0" max='1000000000' @keypress="restrictChars($event)" type='number' v-model.number='numRowBed'>
+                <label>Rows per Bed:<label style='color: #da4f3f'>*</label> </label><input data-cy='row-bed' style='width: 75px;'min='0' max='1000000000' oninput="validity.valid||(value='');" type='number' v-model.number='numRowBed'>
                 <div style='display: flex;text-align:center;padding-top: 25px;'>
-                    <label>Number of Feet:<label style='color: #da4f3f'>*</label> </label><input data-cy='num-feet' style='width: 75px;' min="0" max='1000000000' @keypress="restrictChars($event)" type='number' v-model.number='numFeet'><dropdown-with-all data-cy='unit-feet' :default-input='selectedFeetUnit' :dropdown-list='feetUnits' @selection-changed='setNewFeetUnit'>Units</dropdown-with-all>
+                    <label>Number of Feet:<label style='color: #da4f3f'>*</label> </label><input data-cy='num-feet' style='width: 75px;' min='0' max='1000000000' oninput="validity.valid||(value='');" type='number' v-model.number='numFeet'><dropdown-with-all data-cy='unit-feet' :default-input='selectedFeetUnit' :dropdown-list='feetUnits' @selection-changed='setNewFeetUnit'>Units</dropdown-with-all>
                 </div>
             </div>
        </fieldset>   
        <fieldset class="panel panel-default center-block" style="max-width: 500px;">
             <legend class="panel-heading" style='background-color: #da4f3f; color: white;font-size: x-large;'>Labor</legend>
             <div class="center-block" style='padding: 12px;text-align:center;font-size: medium; display:flex'>
-                 <label>Workers:<label style='color: #da4f3f'>*</label> </label><input data-cy="num-workers" style='width: 50px;' min="0" max='1000000000' @keypress="restrictChars($event)" type='number' v-model.number='numWorkers'>
-                <label>Time:<label style='color: #da4f3f'>*</label> </label><input id="minute-form" data-cy='time-spent' style='width: 75px;' type='number' @keypress="restrictChars($event)" v-model.number='time' v-if="selectedTimeUnit === 'minutes'"> <input id="hour-form" data-cy='time-spent' style='width: 75px;' type='number' v-model='time' v-if="selectedTimeUnit === 'hours'">
+                 <label>Workers:<label style='color: #da4f3f'>*</label> </label><input data-cy="num-workers" style='width: 50px;' min="0" max='1000000000' oninput="validity.valid||(value='');" type='number' v-model.number='numWorkers'>
+                <label>Time:<label style='color: #da4f3f'>*</label> </label><input id="minute-form" data-cy='time-spent' style='width: 75px;' type='number' min='0' max='1000000000' oninput="validity.valid||(value='');" v-model.number='time' v-if="selectedTimeUnit === 'minutes'"> <input id="hour-form" data-cy='time-spent' style='width: 75px;' type='number' min='0' max='1000000000' step="0.01" oninput="validity.valid||(value='');" v-model.number='time' v-if="selectedTimeUnit === 'hours'">
                 <dropdown-with-all data-cy='time-unit' style='text-align:center;' :default-input='selectedTimeUnit' :dropdown-list='timeUnits' @selection-changed='setNewTimeUnit'></dropdown-with-all> 
             </div>
        </fieldset>
@@ -112,15 +112,15 @@
                         window.location.replace('/farm/fd2-barn-kit/seedingReport')
                     }
                 },
-                restrictChars: function($event) {
-                    if ($event.charCode === 0 || /\d/.test(String.fromCharCode($event.charCode))) {
-                        return true
-                    } else {
-                        $event.preventDefault();
-                    }
-                },
-                // restrictNegChars: function($event) {
-                //     if ($event.charCode === 0 || /^-\d*/.test(String.fromCharCode($event.charCode)) ) {
+                // restrictChars: function($event) { // used regular expression to restrict negative values and floating point numbers. May not be the best solution
+                //     if ($event.charCode === 0 || /\d/.test(String.fromCharCode($event.charCode))) {
+                //         return true
+                //     } else {
+                //         $event.preventDefault();
+                //     }
+                // },
+                // restrictNegChars: function($event) { // used regular expression to restrict negative values. May not be the best solution
+                //     if (($event.charCode === 0 || /\d*\.\d{0,2}$/.test(String.fromCharCode($event.charCode))) || /\d/.test(String.fromCharCode($event.charCode))) {
                 //         return true
                 //     } else {
                 //         $event.preventDefault();
